UPDATE: Task 5 - User Component

--- a/src/components/user/User.module.scss
+++ b/src/components/user/User.module.scss
@@ -14,8 +14,7 @@
 .name{
     font-size: 1rem;
     font-weight: 900;
-    line-height: 20px;
-    letter-spacing: 0em;
+    letter-spacing: 0rem;
     text-align: left;
     color:colors.$text_primary;
     margin: 0;
@@ -24,8 +23,7 @@
 .info{
     font-size: 0.8rem;
     font-weight: 700;
-    line-height: 17px;
-    letter-spacing: 0em;
+    letter-spacing: 0rem;
     text-align: left;
     color:colors.$secondary_main;
     margin: 0;
