--- a/src/components/user/User.module.scss
+++ b/src/components/user/User.module.scss
@@ -1,4 +1,4 @@
-@use '../../styles/colors.scss';
+@use '../../styles/colors';
 
 .user{
     display: flex;
@@ -16,7 +16,7 @@
     font-weight: 900;
     letter-spacing: 0rem;
     text-align: left;
-    color: colors.$text_primary;
+    color:colors.$text_primary;
     margin: 0;
 }
 
