UPDATE: Task 8 - CSS  Live state to Card component

--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -11,7 +11,7 @@
   width: 339px;
   height: 443px;
   border-radius: 15px;
-  background-color: red !important;
+  background-color: #0F231B !important;
 }
 
 .avatarHolder {
@@ -62,7 +62,6 @@
 .likes {
   color: colors.$secondary_main !important;
 }
-
 
 
 .badge,
