UPDATE: Task 11 - How it works - ComponentCSS-colors

--- a/src/components/how/Step.module.scss
+++ b/src/components/how/Step.module.scss
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: colors.$primary_main;
+  background-color: colors.$step_color;
   flex-basis: 30%;
   border-radius: 15px 0 0 15px ;
 }
