--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,4 +10,4 @@ $text_primary: #ffffff;
 $text_secondary: #e1e1fc;
 $text_disabled: #8d8da8;
 $text_hint: #e1e1fc;
-$step_color:#1E1A3C;
+$step_color:rgba(78, 36, 242, 0.1);
