--- a/src/components/how/Step.module.scss
+++ b/src/components/how/Step.module.scss
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: colors.$text_primary;
   background-color: colors.$step_color;
   flex-basis: 30%;
   border-radius: 15px 0 0 15px ;
