--- a/src/components/how/Step.module.scss
+++ b/src/components/how/Step.module.scss
@@ -11,11 +11,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: colors.$primary_main;
+  // color: colors.$primary_main;
   background-color: colors.$step_color;
   flex-basis: 30%;
   border-radius: 15px 0 0 15px ;
 }
+
+
 
 .stepP p {
   color:colors.$text_primary;
@@ -47,6 +49,8 @@
   text-transform: uppercase;
   color:colors.$text_primary;
 }
+
+
 
 .stepContent p:last-of-type {
   padding: 0px 50px 49px 54px;
