--- a/src/components/how/Step.module.scss
+++ b/src/components/how/Step.module.scss
@@ -11,8 +11,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // color: colors.$primary_main;
-  background-color: colors.$step_color;
+  color: colors.$primary_main;
+  background-color: colors.$step_numbers_color;
   flex-basis: 30%;
   border-radius: 15px 0 0 15px ;
 }
