--- a/src/components/how/Step.module.scss
+++ b/src/components/how/Step.module.scss
@@ -11,13 +11,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // color: colors.$primary_main;
+  color: colors.$primary_main;
   background-color: colors.$step_numbers_color;
   flex-basis: 30%;
   border-radius: 15px 0 0 15px;
 }
 
-.stepP p {
+.stepP p{
   color: colors.$text_primary;
   font-style: normal;
   font-weight: 700;
@@ -27,6 +27,8 @@
 
 .stepNumber{
   background-color: colors.$step_numbers_color;
+  width: 100%;
+  text-align: center;
 }
 
 .stepContent {
