--- a/src/components/how/Step.module.scss
+++ b/src/components/how/Step.module.scss
@@ -12,7 +12,6 @@
   justify-content: center;
   align-items: center;
   color: colors.$primary_main;
-  background-color: colors.$step_numbers_color;
   flex-basis: 30%;
   border-radius: 15px 0 0 15px;
 }
@@ -26,7 +25,7 @@
 }
 
 .stepNumber{
-  background-color: colors.$step_numbers_color;
+  background-color: colors.$step_color;
   width: 100%;
   text-align: center;
 }
