UPDATE: Task 11 - How it works - ComponentCSS-colors

--- a/src/components/how/Step.module.scss
+++ b/src/components/how/Step.module.scss
@@ -25,6 +25,7 @@
 }
 
 .stepNumber{
+  background-color: colors.$primary_main;
   background-color: colors.$step_color;
   width: 100%;
   text-align: center;
