--- a/src/components/how/Step.module.scss
+++ b/src/components/how/Step.module.scss
@@ -25,7 +25,8 @@
 }
 
 .stepNumber{
-  background-color: rgba(colors.$primary_main, 0.1);
+
+  background-color: rgba(colors.$primary_main, 10%);
   width: 100%;
   text-align: center;
 }
