--- a/src/components/collectors/Collector.module.scss
+++ b/src/components/collectors/Collector.module.scss
@@ -22,6 +22,10 @@
   font-weight: 900;
   font-size: 20px;
   line-height: 24px;
+  border-radius: 15px 0 0 15px;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
 }
 
 .stepNumber {
