--- a/src/components/collectors/Collector.module.scss
+++ b/src/components/collectors/Collector.module.scss
@@ -5,6 +5,7 @@
   height: 76px;
   display: flex;
   margin: 30px 0;
+
 }
 
 .stepP {
@@ -13,7 +14,8 @@
   align-items: center;
   color: colors.$primary_main;
   flex-basis: 30%;
-  border-radius: 15px 0 0 15px;
+
+
 }
 
 .stepP p {
@@ -26,6 +28,7 @@
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
+
 }
 
 .stepNumber {
@@ -45,6 +48,7 @@
   flex-direction: column;
   border-radius: 0;
   flex-basis: 70%;
+  border-radius: 0 15px 15px 0;
 }
 
 .stepContent p:first-of-type {
@@ -56,6 +60,7 @@
   line-height: 22px;
   text-transform: uppercase;
   color: colors.$text_primary;
+  border-radius: 0 15px 15px 0;
 }
 
 .stepContent p:last-of-type {
@@ -65,8 +70,10 @@
   font-size: 14px;
   line-height: 24px;
   color: colors.$text_hint;
+ 
 }
 
 .container.light {
   background-color: rgba(colors.$primary_main, 20%);
+  border-radius:15px;
 }
