FIX: Task 17 - Product Title Info

--- a/src/components/product/ProductImage.module.scss
+++ b/src/components/product/ProductImage.module.scss
@@ -5,7 +5,7 @@
     
 }
 .image{
-    min-width: 300px;
-    min-height: 300px;
-    border-radius: 30px;
+    max-width: 699px;
+    max-height: 798px;
+    border-radius: 15px;
 }
