FIX: Task 17 - Product Title Info

--- a/src/components/product/ProductInfoTitle.module.scss
+++ b/src/components/product/ProductInfoTitle.module.scss
@@ -1,10 +1,11 @@
 .title {
+    font-weight: 900;
+    font-size: 60px;
+    line-height: 73px;
+    text-align: center;
+    color: #ffffff;
 }
 
 .product-info-title {
-  font-weight: 900;
-  font-size: 60px;
-  line-height: 73px;
-  text-align: center;
-  color: #ffffff;
+    width: 340px;
 }
