NEW: Task 19 - Product Info Status

--- a/src/components/product/ProductInfoPrice.module.scss
+++ b/src/components/product/ProductInfoPrice.module.scss
@@ -1,10 +1,11 @@
-@use '../../styles/colors.scss';
+@use "../../styles/colors.scss";
 
 .product-info-price {
   font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 19px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
   text-align: center;
   text-transform: uppercase;
   color: colors.$text_primary;
