--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -2,6 +2,9 @@
 
 .hero {
   text-align: center;
+  width: 100%;
+  height: 420px;
+  background-color: colors.$primary_main;
 }
 
 .text {
@@ -11,4 +14,5 @@
   font-size: 60px;
   line-height: 73px;
   text-transform: uppercase;
+  padding-top: 88px;
 }
