--- a/src/components/profile/ProfileCollectionFilters.module.scss
+++ b/src/components/profile/ProfileCollectionFilters.module.scss
@@ -1,5 +1,10 @@
 @use "../../styles/colors.scss";
 
+.profile-collection-filters{
+    margin-left: 18px;
+    margin-bottom: 43px;
+}
+
 .select {
   min-width: 220px;
   height: 50px;
